--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/bootstrap": "^5.2.6",
     "@types/styled-components": "^5.1.26",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "styled-components": "^5.3.6"
