--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@types/bootstrap": "^5.2.6",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
