--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/bootstrap": "^5.2.6",
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
