--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.7.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
