--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "@types/bootstrap": "^5.2.6",
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
+    "apexcharts": "^3.36.3",
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
